html/css/dashboard.css
/* ... */
.mod-popout.mod-anchor-sw .mod-popout-content {
    border-left-width: 1px;
    margin-left: 10px;
}
.mod-popout.mod-anchor-nw .mod-popout-content {
    border-left-width: 1px;
    margin-left: 10px;
}


/* MOD ICON */
/* icon definitions in img/icons/icons.css */

.mod-icon {
    width: 32px;
    height: 32px;
    vertical-align: middle;
    display: inline-block;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: contain;
    opacity: 0.8;
}





.mod-confirm .mod-icon {
    background-image: url(../img/icons/36/confirm.png) !important;
}




.preset-manager {
    position: absolute;
    top: 10px;
    left: 10px;
    z-index: 1000;
    transition: all 0.3s;
/*
    pointer-events: none;
    touch-callout: none;
    user-select: none;
    user-drag: none;
    -webkit-pointer-events: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -webkit-user-drag: none;
*/
}

.preset-manager.active {
    background: rgba(0, 0, 0, 0.5);
/*
    pointer-events: auto;
    touch-callout: auto;
    user-select: auto;
    user-drag: auto;
    -webkit-pointer-events: auto;
    -webkit-touch-callout: auto;
    -webkit-user-select: auto;
    -webkit-user-drag: auto;
*/
}

.preset-manager .preset-manager-entry {
    background: none;
    border: none;
    color: white;

    opacity: 0.33;

    font-family: 'Ek Mukta', sans-serif;
    font-weight: 100;

    font-size: 32px;
    line-height: 48px;
    height: 48px;

    box-sizing: border-box;

    box-shadow: none !important;
    text-shadow: 0 2px 5px black;

    transition: all 0.3s;

    padding: 0;
    margin: 0;

    outline: 0;

    width: auto;
/*
    pointer-events: none;
    touch-callout: none;
    user-select: none;
    user-drag: none;
    -webkit-pointer-events: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -webkit-user-drag: none;
*/
}
.preset-manager.active .preset-manager-entry {
    opacity: 1;
/*
    pointer-events: auto;
    touch-callout: auto;
    user-select: auto;
    user-drag: auto;
    -webkit-pointer-events: auto;
    -webkit-touch-callout: auto;
    -webkit-user-select: auto;
    -webkit-user-drag: auto;
*/
}

.preset-manager > .mod-button-bind {
    margin: 3px;
}

.preset-manager .preset-manager-container {
    overflow: hidden;
    transition: opacity 0.3s;
    display: none;
    opacity: 0;
    position: absolute;
    top: 48px;
    box-shadow: 0 4px 10px black;
}
.preset-manager.active .preset-manager-container {
    opacity: 1;
    display: block;
}


.preset-manager .mod-button-bar .mod-button {
    width: 50%;
    text-align: center;
}

.preset-manager .mod-list {
    max-height: 400px;
    overflow-y: scroll;
}
.preset-manager .mod-list .mod-list-item {
    height: 50px;
    position: relative;
    transition: height 0.3s;
    overflow: hidden;
}
.preset-manager .mod-list .mod-list-item:hover {
    background: #ddd;
}
.preset-manager .mod-list .preset-manager-preset-name {
    font-size: 1.2em;
    height: 50px;
    line-height: 50px;
    margin-right: 168px;
    cursor: pointer;
    white-space: nowrap;
    padding: 0 5px;
    box-sizing: border-box;
}
.preset-manager .mod-list .mod-list-item.editing .preset-manager-preset-name {
    opacity: 0;
}

.preset-manager .mod-list .preset-manager-preset-entry {
    display: none;
    font-size: 1.2em;
    height: 50px;
    line-height: 50px;
    border: none;
    padding: 0 5px;
    box-sizing: border-box;
    box-shadow: none;
    background: transparent;
    position: absolute;
    top: 0;
    left: 0;
}
.preset-manager .mod-list .mod-list-item.editing .preset-manager-preset-entry {
    display: block;
}


.preset-manager .mod-list .preset-manager-preset-bindstate {
    display: inline-block;
}

.preset-manager .mod-list .mod-button {
    position: absolute;
    top: 3px;
}
.preset-manager .mod-list .mod-button.mod-button-remove {
    right: 58px;
}
.preset-manager .mod-list .mod-button.mod-button-bind {
    right: 3px;
}
.preset-manager .mod-list .mod-button.mod-button-edit {
    right: 113px;
}

/* = PEDALBOARD - SNAPSHOTS
================================================ */
#pedal-presets-list {
    background-color: inherit;
}
#pedal-presets-list-input::selection {
    background: #883996 !important;
    color: white !important;
}

@media only screen and (max-width: 1280px) {
    #plugins-library .count {
        display: none;
    }
}

